--- a/TODO.txt
+++ b/TODO.txt
@@ -2,9 +2,8 @@ extract the config->plugin parameters patterns, uniformize the plugins
 calling (list the plugins and have a loop, not individual calls to each
 plugin, or maybe tie up plugins and their configuration.
 
-for source version control, in the details show the diffstat and even
-the diff. For the diffstat, should be easy with git, in fact I even
-already parse the git diffstat..
+for source version control, in the details show the diffstat; done for
+GIT, could still be done for SVN and HG.
 
 for emails, nice display if there is an attachment instead of dumping
 the base64. a download button would be groovy (or inline preview for
