--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,7 @@
+settings.getSettingsFolder commented in Ical.hs
+
+git parse error on monday 8+tuesday 9 april
+
 add withOpenSSL and go back to SSL for ICAL
 try to re-enable HTTPS for ical, segfault since http-streams..
 
@@ -23,3 +27,6 @@ color as the preview pane background so it's clear to which row the
 preview pane refers.
 
 clear the preview pane when changing day.
+
+firefox google searches, maybe stackoverflow upvotes, dropbox subfolder
+activity, google docs?
