--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,8 @@ API to pass them as parameters that common folder and such info.
 
 git parse error on monday 8+tuesday 9 april
 
+migrate to scotty instead of snap? https://github.com/xich/scotty
+
 add withOpenSSL and go back to SSL for ICAL
 try to re-enable HTTPS for ical, segfault since http-streams..
 
