update the TODO and also serve my current config

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,17 @@
+"config.json" string duplicated in two files
+
+in git if the only common path is the root (currently displaying .../)
+then display the repo name
+
+get rid of the "project" column I think. will simplify email, too.
+
+email is abnormal, because it takes an array of folders. the reason is
+to share the projects+patterns, and have in one email the inbox+sent
+maybe. Probably rather make the user add several Email plugins to
+simplify things.
+
+config: in popups, probably use jquery ui Dialog
+
 redmine: link to wiki diff
 redmine: make me a link to the bug, because I don't get the full info.
 
