--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,8 @@
-ability to remove settings
+port to dom-selector 0.2
+
+ability to remove settings, settings backed by knockout to make the code manageable...
+
+very bad email display 2013-06-17 7:55
 
 "config.json" string duplicated in two files
 
