--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 port to dom-selector 0.2
 
+links broken in skype, see 2013-08-03
+
 ability to remove settings, settings backed by knockout to make the code manageable...
 
 very bad email display 2013-06-17 7:55
