--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+client-side validation if the user doesn't enter all the details
+
 port to dom-selector 0.2
 
 somehow codify the dependency on fay, make cabal build the whole thing. there is a conflict with dependencies between rex and fay if you want both at the same time, too. Elm is building the files at request time, could be an option too for Fay... although I'd rather to pre-build.
