--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,7 @@
+make it clear that passwords are plain text.
+special password entry and also file picker.
+for password entry have an option "show password", see: http://stackoverflow.com/questions/1544317/
+
 client-side validation if the user doesn't enter all the details
 
 port to dom-selector 0.2
