--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,7 @@ make it clear that passwords are plain text.
 special file picker entry?  http://stackoverflow.com/a/18676841/516188
 
 activity view: popup instead of sidebar? that or a min-width on the body to ensure the sidebar is always visible or something.
+=> maybe always visible+button to get display in a popup if there's too much data to fit in the sidebar.
 
 port to dom-selector 0.2
 
