--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,10 @@
 liftM b a instead of my a >>= (return . b)?
 liftM2 instead of do block for Maybe
 
+so that the app stops when the browser tab is closed, have the client send periodical ping (heartbeat) and have the server commit suicide if not receiving it some time.
+
+make a .desktop file for linux and an icon
+
 fix URLs, that we don't need anymore to go to /static/FayApp.html...
 
 make it clear that passwords are plain text.
