big rework of email, now only one mechanism to parse headers for whole message and for multipart sections, parse as bytestring to begin with, so that we can support various encodings in the message sections, and other improvements

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+quoted-printable ==> _ should not be translated to space, that applies only to message subject!
+
 emails:
 11/09, 21:27, text/plain, add <br/> all over the place. but actually it's multipart/related with inline images that i should display...
 display attachments list (name+mimetype) -> probably use this to return images: http://stackoverflow.com/a/10802497/516188 the server returns a JSON describing the data to display, with main HTML and image attachments directly in that JSON, then the client builds the display. But for that I must change the Event definition, to add the possibility of attachments...
