--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,8 @@
 quoted-printable ==> _ should not be translated to space, that applies only to message subject!
 
+fetch from all providers in parrallel to speed up in particular the network-oriented ones. optional, defaults to true
+
 emails:
-11/09, 21:27, text/plain, add <br/> all over the place. but actually it's multipart/related with inline images that i should display...
 display attachments list (name+mimetype) -> probably use this to return images: http://stackoverflow.com/a/10802497/516188 the server returns a JSON describing the data to display, with main HTML and image attachments directly in that JSON, then the client builds the display. But for that I must change the Event definition, to add the possibility of attachments...
 
 liftM b a instead of my a >>= (return . b)?
