--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+way too much inline HTML in FayConfig.hs. I can surely do much better!!
+
 redmine and git times don't match. one has got to be in UTC, the other in local time. see 2013-09-12 bug #338 for instance
 
 redmine is almost useless, must show bug status change at the moment of the event.
